<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ActivityReto2">

    <TextView
        android:id="@+id/reto3pregunta"
        android:layout_width="415dp"
        android:layout_height="131dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/reto3pregunta"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088" />

    <EditText
        android:id="@+id/num1"
        android:layout_width="56dp"
        android:layout_height="71dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:text="@string/num1"
        android:textAlignment="center"
        android:textColor="#070707"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reto3pregunta" />

    <EditText
        android:id="@+id/num2"
        android:layout_width="55dp"
        android:layout_height="64dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:text="@string/num2"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintStart_toEndOf="@+id/sumatext"
        app:layout_constraintTop_toBottomOf="@+id/reto3pregunta" />

    <EditText
        android:id="@+id/num3"
        android:layout_width="43dp"
        android:layout_height="68dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="76dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:text="@string/num3"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintStart_toEndOf="@+id/productotext"
        app:layout_constraintTop_toBottomOf="@+id/reto3pregunta" />

    <TextView
        android:id="@+id/sumatext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="88dp"
        android:text="@string/sumatext"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintStart_toEndOf="@+id/num1"
        app:layout_constraintTop_toBottomOf="@+id/reto3pregunta" />

    <TextView
        android:id="@+id/productotext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="88dp"
        android:text="@string/productotext"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintStart_toEndOf="@+id/num2"
        app:layout_constraintTop_toBottomOf="@+id/reto3pregunta" />

    <EditText
        android:id="@+id/respuestacalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545" />

    <Button
        android:id="@+id/okbutton"
        android:layout_width="150dp"
        android:layout_height="58dp"
        android:layout_marginEnd="32dp"
        android:text="Calcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.748" />
</androidx.constraintlayout.widget.ConstraintLayout>